--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@example/basics",
   "version": "0.0.1",
   "private": true,
+  "engines": {
+    "node": "18.16.0"
+  },
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
