--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
   },
   "dependencies": {
     "astro": "^4.10.1"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
