--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "node": "20.10.0"
   },
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
+    "astro": "astro",
     "build": "astro build",
+    "dev": "astro dev",
     "preview": "astro preview",
-    "astro": "astro"
+    "start": "astro dev"
   },
   "dependencies": {
     "astro": "^4.16.1"
